<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <name>runtime</name>
    <url>https://github.com/assimbly/runtime</url>
    <packaging>pom</packaging>
    <groupId>org.assimbly</groupId>
    <artifactId>runtime</artifactId>
    <version>6.0.0</version>

    <modules>
        <module>commonBase</module>
        <module>camelBase</module>
        <module>springBase</module>
        <module>utils</module>
        <module>dil</module>
        <module>broker</module>
        <module>brokerRest</module>
        <module>integration</module>
        <module>integrationRest</module>
    </modules>

    <properties>

        <maven-api.version>3.9.14</maven-api.version>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <maven.versions.rules>file:///${project.basedir}/rules.xml</maven.versions.rules>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <main.basedir>${project.basedir}</main.basedir>

        <!-- Manage the versions of all main dependencies here -->
        <assimbly.version>6.0.0</assimbly.version>
        <activemq-classic.version>6.2.3</activemq-classic.version>
        <activemq-artemis.version>2.53.0</activemq-artemis.version>
        <activemq-artemis-native.version>2.0.0</activemq-artemis-native.version>
        <bouncycastle.version>1.83</bouncycastle.version>
        <camel.version>4.18.1</camel.version>
        <commons-cli.version>1.11.0</commons-cli.version>
        <commons-codec.version>1.21.0</commons-codec.version>
        <commons-configuration2.version>2.13.0</commons-configuration2.version>
        <commons-jxpath.version>1.4.0</commons-jxpath.version>
        <commons-lang3.version>3.20.0</commons-lang3.version>
        <commons-text.version>1.15.0</commons-text.version>
        <docconverter.version>2.0.0</docconverter.version>
        <dropwizard-metrics.version>4.2.38</dropwizard-metrics.version>
        <elasticsearch-rest-client.version>9.3.2</elasticsearch-rest-client.version>
        <glassfish.jaxb.version>4.0.7</glassfish.jaxb.version>
        <groovy-script.version>5.0.5</groovy-script.version>
        <httpClient5.version>5.6</httpClient5.version>
        <ibmmq-client.version>9.4.5.0</ibmmq-client.version>
        <jackson.version>3.1.1</jackson.version>
        <jakarta-activation-api.version>2.1.4</jakarta-activation-api.version>
        <jakarta-annotation-api.version>3.0.0</jakarta-annotation-api.version>
        <jakarta-json-api.version>2.1.3</jakarta-json-api.version>
        <jakarta-servlet-api.version>6.1.0</jakarta-servlet-api.version>
        <jakarta-xml-soap-api.version>3.0.2</jakarta-xml-soap-api.version>
        <jakarta-xml-bind-api.version>4.0.5</jakarta-xml-bind-api.version>
        <jasypt.version>1.9.3</jasypt.version>
        <json.version>20251224</json.version>
        <json-path.version>3.0.0</json-path.version>
        <!--<jwt.version>0.13.0</jwt.version>-->
        <jolokia.version>2.5.1</jolokia.version>
        <kamelet.version>4.18.1</kamelet.version>
        <logback-classic.version>1.5.32</logback-classic.version>
        <mapdb.version>3.1.0</mapdb.version>
        <netty.version>4.2.12.Final</netty.version>
        <slf4j.version>2.0.17</slf4j.version>
        <spring.version>7.0.6</spring.version>
        <spring-boot.version>4.0.5</spring-boot.version>
        <spring-data.version>4.0.4</spring-data.version>
        <springdoc.version>3.0.2</springdoc.version>
        <swagger-v3.version>2.2.47</swagger-v3.version>
        <tika.version>1.28.5</tika.version>
        <xerces.version>2.12.2</xerces.version>
        <xpath2.version>1.2.0</xpath2.version>
        <xstream.version>1.4.21</xstream.version>

        <!-- Manage the versions of test dependencies here -->
        <assertj.version>3.27.7</assertj.version>
        <googleauth.version>1.5.0</googleauth.version>
        <h2database.version>2.4.240</h2database.version>
        <hamcrest.version>3.0</hamcrest.version>
        <jetty.version>12.1.8</jetty.version>
        <jsonassert.version>1.5.3</jsonassert.version>
        <json-unit-assertj.version>5.1.1</json-unit-assertj.version>
        <junit.version>6.0.3</junit.version>
        <mockito.version>5.23.0</mockito.version>
        <mockserver.version>5.15.0</mockserver.version>
        <mongo.version>4.7.2</mongo.version>
        <powermock.version>2.0.9</powermock.version>
        <testcontainers.version>2.0.4</testcontainers.version>
        <xmlunit.version>2.11.0</xmlunit.version>

    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.camel</groupId>
                <artifactId>camel-bom</artifactId>
                <version>${camel.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>tools.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.apache.maven.plugin-tools</groupId>
                <artifactId>maven-plugin-annotations</artifactId>
                <version>3.15.2</version>
                <scope>provided</scope> <!-- annotations are not used at runtime because @Retention(value=CLASS), they are needed only to build the plugin -->
            </dependency>
        </dependencies>

    </dependencyManagement>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>Temporary Staging Repository</name>
            <url>https://maven.pkg.github.com/assimbly/runtime</url>
        </repository>
    </distributionManagement>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.16.2</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>dependency-updates-report</report>
                            <report>plugin-updates-report</report>
                            <report>property-updates-report</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
        </plugins>
    </reporting>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.1.4</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.15.0</version>
                    <configuration>
                        <encoding>UTF-8</encoding>
                        <compilerArgs>
                            <arg>-XDcompilePolicy=simple</arg>
                            <arg>--should-stop=ifError=FLOW</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>3.6.1</version>
                    <executions>
                        <execution>
                            <id>enforce-maven</id>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <requireMavenVersion>
                                        <version>[3.9.9,)</version>
                                    </requireMavenVersion>
                                    <requireJavaVersion>
                                        <version>25</version>
                                    </requireJavaVersion>
                                </rules>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.4.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>3.1.4</version>
                </plugin>
                <plugin>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.9.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.21.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.4</version>
                </plugin>
                <plugin>
                    <artifactId>maven-toolchains-plugin</artifactId>
                    <version>3.2.0</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>toolchain</goal>
                            </goals>
                            <configuration>
                                <toolchains>
                                    <jdk>
                                        <version>25</version>
                                    </jdk>
                                </toolchains>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <release>25</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <rulesUri>${maven.versions.rules}</rulesUri>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>sonatype-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

</project>
